# fusemark

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  create_pr.py  glossary.json  pyproject.toml  requirements-dev.txt  requirements.txt  start_granola.vbs  test_transcript.txt
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
app/: autostart.py  config.py  exceptions.py  glossary.py  i18n.py  main.py  notemaker.py  notes.py  prompts.py  queue.py  recorder.py  recording_service.py  server.py  transcriber.py  tray.py  updater.py  utils.py  worker.py
app/llm/: __init__.py  anthropic_provider.py  mistral_provider.py  openai_provider.py
app/prompt_defaults/: term_suggestion.txt
app/prompts/: note_system.txt  note_template.md
app/transcription/: __init__.py  local.py
docs/: ARCHITECTURE.md  BRIEF.md  CHANGES.md  PLAN.md  PRIVACY_POLICY.md  PRODUCTION_PLAN.md  PROJECT_KNOWLEDGE.md  RELEASE_CHECKLIST.md  REVIEW.md  REVIEWS.md  template_example.md
installer/: README.md  build.spec  setup.iss
installer/ffmpeg/: README.md
static/: app.js  style.css
templates/: index.html  settings.html  wizard.html
tests/: conftest.py  test_autostart.py  test_config.py  test_glossary.py  test_i18n.py  test_installer_script.py  test_integration.py  test_llm.py  test_notemaker.py  test_notes.py  test_prompts.py  test_queue.py  test_recorder.py  test_recording_service.py  test_server.py  test_transcription.py  test_tray.py  test_updater.py  test_utils.py  test_worker.py
